<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">宇付通</string>
    <string name="setting">设置</string>
    <string name="exit_note">再次点击退出</string>
    <string name="hint_enter_company">请输入公司号</string>
    <string name="hint_enter_account">请输入账号</string>
    <string name="hint_enter_password">请输入密码</string>
    <string name="save_account">保存账号</string>
    <string name="auto_login">免登陆</string>
    <string name="login">登陆</string>
    <string name="main_default_company">北京宇信易诚信息技术有限公司</string>
    <string name="main_back">后退</string>
    <string name="main_setting">设置</string>
    <string name="main_cashier">收银</string>
    <string name="main_orders">订单管理</string>
    <string name="main_coupon">使用优惠券</string>
    <string name="main_vip">会员管理</string>
    <string name="main_sales">店面活动</string>
    <string name="main_statistics">数据统计</string>

</resources>