<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/login_title_size" />

    <EditText
        android:layout_width="@dimen/login_et_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:background="@drawable/bg_et"
        android:digits="@+id/et_login_company"
        android:drawableLeft="@drawable/ic_account"
        android:drawableStart="@drawable/ic_account"
        android:hint="@string/hint_enter_company"
        android:padding="@dimen/login_et_padding"
        android:textSize="@dimen/login_text_size" />

    <EditText
        android:layout_width="@dimen/login_et_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:background="@drawable/bg_et"
        android:digits="@+id/et_login_account"
        android:drawableLeft="@drawable/ic_account"
        android:drawableStart="@drawable/ic_account"
        android:hint="@string/hint_enter_account"
        android:padding="@dimen/login_et_padding"
        android:textSize="@dimen/login_text_size" />

    <EditText
        android:layout_width="@dimen/login_et_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:background="@drawable/bg_et"
        android:digits="@+id/et_login_password"
        android:drawableLeft="@drawable/ic_lock"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/hint_enter_password"
        android:padding="@dimen/login_et_padding"
        android:textSize="@dimen/login_text_size" >
    </EditText>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_account"
            android:textSize="@dimen/login_text_size" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_login"
            android:textSize="@dimen/login_text_size" />
    </RadioGroup>

    <Button
        android:layout_width="@dimen/login_et_width"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        android:padding="@dimen/login_et_padding"
        android:text="@string/login"
        android:textSize="@dimen/login_text_size" />

</LinearLayout>